# backend

./: .gitignore  Cargo.toml  LICENSE  README.md  db.erd.json
docker/mysql/: docker-compose.yml
docker/mysql/init/: 0_setting.sql  1_database.sql
erd/: db.erd.json
src/be-core/: Cargo.toml
src/be-core/src/: main.rs
src/db/sl_sys/: Cargo.toml  gen_migration.sh  reset_database.sh  run_migration.sh
src/db/sl_sys/migrations/2024-12-07-062755_user_create/: up.sql
src/db/sl_sys/src/: lib.rs  schema.rs
src/db/sl_sys/src/user/: mod.rs
src/db/sl_sys/tests/: api.rs
